添加Kafka Consumer seek 指定主题和分区、偏移量

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
     <modules>
         <module>test4redis</module>
         <module>test4grpc</module>
+        <module>test4kafka</module>
     </modules>
 </project>
