--- a/test4kafka/pom.xml
+++ b/test4kafka/pom.xml
@@ -10,6 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>test4kafka</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -17,6 +29,7 @@
             <artifactId>kafka_2.11</artifactId>
             <version>0.10.2.2</version>
         </dependency>
+
     </dependencies>
 
 </project>
