--- a/test4redis/pom.xml
+++ b/test4redis/pom.xml
@@ -29,7 +29,13 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.5.2</version>
+            <!--<version>2.5.2</version>-->
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.redislabs</groupId>
+            <artifactId>jrebloom</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/xstream/xstream -->
