--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>test4kafka</module>
         <module>test4hadoop</module>
         <module>test4bf</module>
+        <module>test4java</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
