添加zookeeper测试模块

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>test4bf</module>
         <module>test4java</module>
         <module>test4relation</module>
+        <module>test4zk</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
