--- a/test4netty/build.gradle
+++ b/test4netty/build.gradle
@@ -12,5 +12,5 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile ("io.netty:netty-all:4.1.35.Final")
 }
