--- a/test4netty/build.gradle
+++ b/test4netty/build.gradle
@@ -12,5 +12,8 @@ repositories {
 }
 
 dependencies {
-    compile ("io.netty:netty-all:4.1.35.Final")
+    compile (
+            "io.netty:netty-all:4.1.35.Final",
+            "com.google.protobuf:protobuf-java:3.3.1"
+    )
 }
