--- a/test4netty/build.gradle
+++ b/test4netty/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile (
             "io.netty:netty-all:4.1.35.Final",
-            "com.google.protobuf:protobuf-java:3.3.1"
+            "com.google.protobuf:protobuf-java:3.3.1",
+            "org.apache.thrift:libthrift:0.12.0"
     )
 }
