--- a/test4relation/pom.xml
+++ b/test4relation/pom.xml
@@ -13,9 +13,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <grpc.version>0.14.0</grpc.version>
-        <protobuf.version>3.0.0-beta-2</protobuf.version>
-        <protoc.version>3.0.0-beta-2</protoc.version>
+        <grpc.version>1.0.0</grpc.version>
+        <protobuf.version>3.1.0</protobuf.version>
+        <protoc.version>3.1.0</protoc.version>
         <!-- 主要依赖库的版本定义 -->
         <slf4j.version>1.7.2</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
