修改Flink案例程序

--- a/test4flink/pom.xml
+++ b/test4flink/pom.xml
@@ -56,7 +56,7 @@
     <!-- This profile helps to make things run out of the box in IntelliJ -->
     <!-- Its adds Flink's core classes to the runtime class path. -->
     <!-- Otherwise they are missing in IntelliJ, because the dependency is 'provided' -->
-    <!--<profiles>
+    <profiles>
         <profile>
             <id>add-dependencies-for-IDEA</id>
 
@@ -75,7 +75,7 @@
                 </dependency>
             </dependencies>
         </profile>
-    </profiles>-->
+    </profiles>
 
 
 </project>
