--- a/test4kafka/pom.xml
+++ b/test4kafka/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>kafka_2.12</artifactId>
             <version>2.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
