--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>test4relation</module>
         <module>test4zk</module>
         <module>test4nlp</module>
+        <module>test4springboot</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
