--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>test4zk</module>
         <module>test4nlp</module>
         <module>test4springboot</module>
+        <module>test4spark</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
