--- a/test4k8s/pom.xml
+++ b/test4k8s/pom.xml
@@ -25,11 +25,14 @@
                     <version>6.0.1</version>
                 </dependency>-->
         <!-- springboot -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-parent</artifactId>
             <version>2.0.2.RELEASE</version>
+            <type>pom</type>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
