--- a/test4spring/pom.xml
+++ b/test4spring/pom.xml
@@ -6,11 +6,13 @@
         <artifactId>test</artifactId>
         <groupId>com.song.cn</groupId>
         <version>1.0-SNAPSHOT</version>
+        <!-- 与不配置一样，默认就是寻找上级目录下得pom.xml -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>test4spring</artifactId>
-    <packaging>pom</packaging>
+    <!--    <packaging>pom</packaging>-->
 
     <properties>
         <spring.version>5.2.2.RELEASE</spring.version>
@@ -26,12 +28,12 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
+                <artifactId>spring-jdbc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-mvc</artifactId>
+                <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
@@ -44,6 +46,7 @@
 
     <!-- Spring 依赖 -->
     <dependencies>
+        <!--Spring IoC 核心依赖-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -54,11 +57,38 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-mvc</artifactId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        <!-- 资源配置 -->
+        <!--<resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>-->
+    </build>
+
+
 </project>
